# sqlc-gen-typescript

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs
src/: ast_utils.rs  main.rs  shared.rs
src/drivers/: bun_sqlite.rs  mod.rs  shared.rs
