[package]
name = "sqlc_gen_typescript"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
debug = "none"
strip = "debuginfo"
opt-level = "s"
codegen-units = 1

[dependencies]
oxc_allocator = "0.108.0"
oxc_ast = "0.108.0"
oxc_codegen = "0.108.0"
prost = "0.14.3"

[build-dependencies]
prost-build = "0.14.3"
